--- a/config.example.yaml
+++ b/config.example.yaml
@@ -28,6 +28,10 @@ jenkins:
           default: master
           type: branch
 
+#server:
+#  listen: 127.0.0.1:4390
+#  verification_secret: d12345sd943434sdfdsfsif9sif9
+
 jira:
   #host: https://jira.example.de
   username: readonlyuser
