--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
-        run: make test
+        run: make test-coverage
+      - name: Upload Coverage
+        uses: codecov/codecov-action@v1
