--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,3 +1,5 @@
+name: Release
+
 on:
   release:
     types: [created]
@@ -10,6 +12,12 @@ jobs:
       matrix:
         goos: [linux, windows, darwin]
         goarch: ["386", amd64]
+        exclude:
+          # windows/386 and darwin/386 seems useless
+          - goarch: "386"
+            goos: windows
+          - goarch: "386"
+            goos: darwin
     steps:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@master
@@ -19,3 +27,14 @@ jobs:
           goarch: ${{ matrix.goarch }}
           binary_name: slack-bot
           project_path: "./cmd/bot"
+  push_to_registry:
+    name: Push release Docker image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Push to GitHub Packages
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: innogames/slack-bot:release
