enhancement: added more help categories

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,19 @@
 version: 2
 updates:
-  - package-ecosystem: gomod
+  - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: daily
-      time: "06:00"
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 2
 
-  # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: daily
+    open-pull-requests-limit: 2
+
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 2
