--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    name: Tests
     strategy:
       matrix:
         go-version: [1.15.x]
@@ -25,11 +26,11 @@ jobs:
       - name: Upload Coverage
         uses: codecov/codecov-action@v1
   lint:
+    name: Lint
     runs-on: ubuntu-latest
-    name: lint
     steps:
       - uses: actions/checkout@v2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.32
+          version: v1.33
