workflow: disable "go-proxy-action" for now

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -38,5 +38,5 @@ jobs:
     steps:
       - name: Goreportcard
         uses: creekorful/goreportcard-action@v1.0
-      - name: Update godocs
-        uses: andrewslotin/go-proxy-pull-action@master
+#      - name: Update godocs
+#        uses: andrewslotin/go-proxy-pull-action@master
