--- a/config.example.yaml
+++ b/config.example.yaml
@@ -39,7 +39,7 @@ jenkins:
 # WIP: allows receiving events directly from Slack server instead via RTM
 #server:
 #  listen: 127.0.0.1:4390
-#  verification_secret: d12345sd943434sdfdsfsif9sif9
+#  signing_secret: d12345sd943434sdfdsfsif9sif9
 
 # optional Jenkins integration
 jira:
