jenkins: polish "jenkins nodes" command
- added link to "computers"
- display number of busy executors
- sort nodes by name

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -41,7 +41,7 @@ jenkins:
 #  listen: 127.0.0.1:4390
 #  signing_secret: d12345sd943434sdfdsfsif9sif9
 
-# optional Jenkins integration
+# optional Jira integration
 jira:
   #host: https://jira.example.de
   username: readonlyuser
