enhancement: allow admins to repost any slack message

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,6 +45,7 @@ linters:
     - nakedret
     - nolintlint
     - prealloc
+    - predeclared
     - rowserrcheck
     - scopelint
     - staticcheck
