--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,6 +25,8 @@ jobs:
           fetch-depth: 0
       - name: Test
         run: make test-coverage
+        env:
+          BOT_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Coverage
         uses: codecov/codecov-action@v1
   lint:
