--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,4 +37,13 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2.4.0
         with:
-          version: v1.36
+          version: v1.37
+          only-new-issues: true
+  docker:
+    name: Build Docker image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
