--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,6 +14,11 @@ linters-settings:
       - opinionated
     disabled-checks:
       - paramTypeCombine
+issues:
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - errcheck
 
 linters:
   enable:
