--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: Run tests and buid binary
+    name: Run tests and build binary
     strategy:
       matrix:
         go-version: [1.15.x, 1.16.x]
