readme: added steps for "install from manifest" which is easier than before!

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,23 +23,20 @@ linters:
     - gocritic
     - gocyclo
     - gofmt
-    - golint
     - goprintffuncname
     - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
     - makezero
-    - maligned
     - megacheck
     - misspell
     - nakedret
     - nolintlint
     - prealloc
     - predeclared
+    - revive
     - rowserrcheck
-    - scopelint
     - staticcheck
     - structcheck
     - stylecheck
