feature: add template function {{ countBackgroundJobs }}

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -70,6 +70,18 @@ github:
 #  accesstoken: # needed for the API
 
 
+#crons:
+# Cron example: 3 times a day check in the given channel if there are more than 10 background jobs, which might be watched pull requests
+# - schedule: "CRON_TZ=Europe/Berlin 0 9,13,16 * * * MON-FRI"
+#   channel: "#backend-pr"
+#   commands:
+#    - |
+#      {{$prs := countBackgroundJobsInChannel "C12121"}}
+#      {{$allowedPrs := 10}}
+#      {{if gt $prs $allowedPrs }}
+#        reply <@devs> There are *{{$prs}}* pull requests open...please take a look! :scream:
+#      {{end}}
+
 # used for the "weather" command to fetch current weather information from https://openweathermap.org/api
 #open_weathermap:
 #  apikey: iamtheapifromopenweathermap
