--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,6 +3,7 @@ slack:
   token: # use xoxb-1234567-secret
   socket_token: # needed for Socket mode, starts with "xapp-"
   debug: false # some more slack debug information
+  allowed_groups: [] # allowed slack user group id or name. you need paid slack plan
 
 # list of trusted slack users: allows the user-id and the name
 allowed_users:
