--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         # https://github.com/actions/go-versions/blob/main/versions-manifest.json
-        go-version: [1.17.x, 1.18.x]
+        go-version: [1.18.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -24,14 +24,16 @@ jobs:
           stable: false
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Run tests
+      - name: Run fast tests
+        if: matrix.os != 'ubuntu-latest'
         run: make test
         env:
           BOT_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build Bot
-        run: make build/slack-bot
-      - name: Build CLI
-        run: make build/cli
+      - name: Run tests with race
+        if: matrix.os == 'ubuntu-latest'
+        run: make test-race
+        env:
+          BOT_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   test-coverage:
     name: Generate test coverage
     runs-on: "ubuntu-latest"
@@ -55,7 +57,7 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.2.0
         with:
-          version: v1.44.0
+          version: v1.47.0
           only-new-issues: true
   gosec:
     name: GoSec
