--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,6 +40,8 @@ jobs:
     steps:
       - name: Install Go
         uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Test
