--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - name: Install Go
         uses: actions/setup-go@v3
+        with:
+          check-latest: true
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Goreportcard
