--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
       - uses: wangyoucao577/go-release-action@v1.34
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          goversion: "1.18"
+          goversion: 1.20
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
           binary_name: slack-bot
