Fix some linter warnings and deprecations

--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main cmd/bot/main.go"
   delay = 2500
-  exclude_dir = ["storage", "tmp", "vendor"]
+  exclude_dir = ["storage", "tmp", "vendor", "build", "docs", "examples"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
