--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,11 @@
-
 issues:
   exclude-rules:
     - path: _test\.go
       linters:
         - errcheck
+        - perfsprint
+        - usestdlibvars
+
 
 linters:
   enable:
@@ -14,12 +16,14 @@ linters:
     - dogsled
     - dupl
     - errcheck
+    - errname
     - errorlint
     - exhaustive
     - exportloopref
     - fatcontext
-    - gochecknoinits
+    - gci
     - gocheckcompilerdirectives
+    - gochecknoinits
     - gocritic
     - gocyclo
     - gofumpt
@@ -31,12 +35,14 @@ linters:
     - ineffassign
     - intrange
     - loggercheck
-    - mirror
     - makezero
-    - misspell
     - mirror
+    - misspell
+    - musttag
     - nakedret
+    - nilerr
     - nolintlint
+    - noctx
     - perfsprint
     - prealloc
     - predeclared
@@ -45,12 +51,26 @@ linters:
     - staticcheck
     - stylecheck
     - tagalign
+    - tenv
     - testifylint
     - thelper
     - typecheck
     - unconvert
     - unparam
     - unused
+    - usestdlibvars
     - wastedassign
     - whitespace
   fast: false
+
+  govet:
+    enable-all: true
+    disable:
+      - structtag
+
+  gofumpt:
+    extra-rules: true
+
+  perfsprint:
+    errorf: false
+    strconcat: false
