--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -50,6 +50,8 @@ jobs:
           BOT_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload Coverage
         uses: codecov/codecov-action@v5
+      - name: Build examples
+        run: cd examples/custom_commands && make
   lint:
     name: Lint
     if: ${{ github.event_name == 'pull_request' }}
