fix issue with jenkins librairy upgrade to 1.2.0

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,6 +55,9 @@ linters:
           - perfsprint
           - usestdlibvars
         path: _test\.go
+      - linters:
+          - tagalign
+        path: bot/config/
     paths:
       - third_party$
       - builtin$
